--- a/src/components/WordItem/WordItem.css
+++ b/src/components/WordItem/WordItem.css
@@ -1,3 +1,13 @@
 .part-of-speech-item{
     list-style-type: none;
+    margin-top: 10px;
+}
+
+h1{
+    padding: 0;
+    margin: 0;
+}
+
+h3{
+    margin: 0;
 }
