--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
+
+
 .app{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     margin: auto;
+    width: 95vw;
+    height: auto;
 }
 
 form{
