--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
+
 #root{
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
     justify-content: center;
 }
