Adjusted the x button to delete history to the center

--- a/src/components/WordHistory/WordHistory.css
+++ b/src/components/WordHistory/WordHistory.css
@@ -7,6 +7,9 @@
     font-size: smaller;
     color: white;
     margin-left: 3px;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
 }
 
 .word-history-list{
